--- a/main/templates/contractors.html
+++ b/main/templates/contractors.html
@@ -30,6 +30,8 @@
                   <option selected value="">...Select phase...</option>
                     {% for phase in phases %}
                     <option value="{{ phase.phase_number }}">{{ phase.phase_name }}</option>
+                    {% empty %}
+                    <option value="">Phases completed</option>
                     {% endfor %}
                   </select>
                 </div>
@@ -44,7 +46,7 @@
               <div class="row mb-3">
                 <label for="image" class="col-sm-2 col-form-label">File Upload</label>
                 <div class="col-sm-10">
-                  <input class="form-control" name="image" type="file" id="image">
+                  <input class="form-control" name="file" type="file" id="image">
                 </div>
               </div>
               
