--- a/main/templates/tables-data.html
+++ b/main/templates/tables-data.html
@@ -22,6 +22,7 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">ALL PROJECTS</h5>
+            <button type="button" class="btn btn-primary" onclick="window.open('/projects/report', '_blank')">Download PDF</button>
             <!-- <p>Add lightweight datatables to your project with using the <a href="https://github.com/fiduswriter/Simple-DataTables" target="_blank">Simple DataTables</a> library. Just add <code>.datatable</code> class name to any table you wish to conver to a datatable. Check for <a href="https://fiduswriter.github.io/simple-datatables/demos/" target="_blank">more examples</a>.</p> -->
 
             <!-- Table with stripped rows -->
