--- a/main/templates/users-profile.html
+++ b/main/templates/users-profile.html
@@ -23,8 +23,8 @@
           <div class="card-body profile-card pt-4 d-flex flex-column align-items-center">
 
             <img src="{% static 'assets/img/profile-img.jpg' %}" alt="Profile" class="rounded-circle">
-            <h2>Jeph Wamai</h2>
-            <h3>Wendanyi Bridge</h3>
+            <h2>{{ contractor.first_name }} {{ contractor.last_name }} </h2>
+            <h3>{{ contractor.project.project_name }}</h3>
             <div class="social-links mt-2">
               <!--<a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
               <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
