--- a/main/templates/users-profile.html
+++ b/main/templates/users-profile.html
@@ -242,19 +242,20 @@
 
               <div class="tab-pane fade pt-3" id="profile-change-password">
                 <!-- Change Password Form -->
-                <form>
+                <form id="change_password" method="POST" action="/user/profile/update">
+                  {% csrf_token %}
 
                   <div class="row mb-3">
                     <label for="currentPassword" class="col-md-4 col-lg-3 col-form-label">Current Password</label>
                     <div class="col-md-8 col-lg-9">
-                      <input name="password" type="password" class="form-control" id="currentPassword">
+                      <input name="currentPassword" type="password" class="form-control" id="currentPassword">
                     </div>
                   </div>
 
                   <div class="row mb-3">
                     <label for="newPassword" class="col-md-4 col-lg-3 col-form-label">New Password</label>
                     <div class="col-md-8 col-lg-9">
-                      <input name="newpassword" type="password" class="form-control" id="newPassword">
+                      <input name="newPassword" type="password" class="form-control" id="newPassword">
                     </div>
                   </div>
 
@@ -266,7 +267,7 @@
                   </div>
 
                   <div class="text-center">
-                    <button type="submit" class="btn btn-primary">Change Password</button>
+                    <button type="submit" class="btn btn-primary" id="btn_change_pass">Change Password</button>
                   </div>
                 </form><!-- End Change Password Form -->
 
@@ -282,4 +283,40 @@
   </section>
 
 </main>
+<script>
+  $(document).ready(function(){
+    $("#change_password").submit( async function(event){
+      event.preventDefault();
+
+      const oldpass = "";
+      const new_pass = "";
+      const confirm_pass = "";
+      const btn_submit = $("#btn_change_pass");
+      /// TODO: Validate
+
+      const formData = new FormData(this);
+      btn_submit.attr("disabled", "disabled");
+
+      try{
+        const response = await fetch("/user/profile/update", {
+          method: 'POST',
+          body: formData,
+        });
+        const data = await response.json()
+        const message = data.message;
+        const class_bs = response.ok ? "alert-success" : "alert-danger";
+        document.getElementById("general_modal_body").innerHTML = `<div class="alert ${class_bs}" roler="alert">${message}</div>`;
+        showModal();
+        btn_submit.removeAttr("disabled")
+      }
+      catch(error){ 
+        console.error('Error:', error);
+        document.getElementById("general_modal_body").innerHTML = `<div class="alert alert-danger" roler="alert">'Error: ${error}</div>`;
+        showModal();
+        btn_submit.removeAttr("disabled");
+      };
+    })
+  });
+
+</script>
 {% endblock %}
